# django-class-shop-202312

./: README.md  pyproject.toml
core/: settings.py  urls.py
orders/: forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_orderdetail.py  0003_alter_order_user.py
orders/templates/: order_base.html
orders/templates/orders/: shop_car_detail.html
products/: admin.py  context_processors.py  models.py  urls.py  views.py
products/fixtures/products/: category.json  tag.json
products/migrations/: 0001_initial.py
products/templates/: product_base.html
products/templates/products/: product_list.html  product_retrieve.html
templates/: _navbar.html  base.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
