[tool.poetry]
name = "django-class-shop-202312"
version = "0.1.0"
description = ""
authors = ["Arthur Chang <arthurc0102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
django-extensions = "^3.2.3"
django-bootstrap5 = "^23.4"


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
black = "^23.12.1"
isort = "^5.13.2"
ipython = "^8.20.0"
werkzeug = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
profile = "django"
preserve_blank_lines = true